syntax = "proto3";

package pb;

import "user.proto";

option go_package = "habits.com/habit/pb";

message CreateUserRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    string access_token = 1;
    User user = 2;
}

service UserModifier {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}
}